2010-03-18  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>

Reviewed by Kenneth Rohde Christiansen.

        Add an overlay QGraphicsTextItem to QtLauncher so we can display FPS info
        on the launcher and not on the terminal anymore.

        [Qt] QtLauncher's FPS info should be displayed on an overlay text item
        https://bugs.webkit.org/show_bug.cgi?id=36244

        * QtLauncher/webview.cpp:
        (WebViewGraphicsBased::WebViewGraphicsBased):
        (WebViewGraphicsBased::setFrameRateMeasurementEnabled):
        (WebViewGraphicsBased::updateFrameRate):
        * QtLauncher/webview.h:

Canonical link: https://commits.webkit.org/47477@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56183 268f45cc-cd09-0410-ab3c-d52691b4dbfc